JEAP-5193 Add support for custom pom template for messagetypes